Fixed text align in 'Content Of' component

--- a/src/ui/sections/listen/section-content.styles.css
+++ b/src/ui/sections/listen/section-content.styles.css
@@ -6,6 +6,7 @@
 }
 
 .SectionContent_content_of {
+	text-align: left;
 	width: 90%;
 	padding-top: 20px;
 	padding-bottom: 40px;
